fix(light-mode): Toggle switch spacing issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -110,7 +110,7 @@ h1::after {
   justify-content: flex-start;
 }
 
-.navbar__items div[class*='ColorModeToggle'] {
+.navbar__items div:nth-child(3) {
   margin-left: 0.75rem;
 }
 
